Initail Box Integration

--- a/Cloudy/Cloudy/Cloudy-Info.plist
+++ b/Cloudy/Cloudy/Cloudy-Info.plist
@@ -39,6 +39,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>db-4mk4cldk8wu2emp</string>
+				<string>box-ux3ux0v2rl17tppcfry7ddnuj57h3bl8</string>
 			</array>
 		</dict>
 	</array>
